# ai-video-generator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .railwayignore  ANALYSIS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  INTEGRATION_CHECKLIST.md  NOTION_FIX_SUMMARY.md  NOTION_SETUP.md  NOTION_TROUBLESHOOTING.md  PR_ISSUE_ANALYSIS.md  QUICK_FIX.md  README.md  README_GENERIC.md  SECURITY_INCIDENT_REPORT.md  SECURITY_PURGE_PLAN.md  STATUS.md  STORY_2.3_TECHNICAL_REQUIREMENTS.md  VERIFICATION_GUIDE.md  alembic.ini  pyproject.toml  railway.json  railway.toml
.claude/: settings.local.json
.github/workflows/: pr-checks.yml
_bmad-output/: DEPLOYMENT-VALIDATION-STRATEGY.md  automation-summary-2026-01-17.md  automation-summary.md  development-guide.md  index.md  project-context.md  project-overview.md  project-parts.json  project-scan-report.json  source-tree-analysis.md  test-fix-implementation-summary.md  test-fix-plan.md
_bmad-output/analysis/: brainstorming-session-2026-01-07.md
_bmad-output/architecture/: architecture-completion-summary.md  architecture-pattern.md  architecture-validation-results.md  core-architectural-decisions.md  data-flow-pipeline.md  deployment-execution.md  executive-summary.md  implementation-patterns-consistency-rules.md  index.md  project-context-analysis.md  project-structure-boundaries.md  starter-template-evaluation.md  technology-stack.md
_bmad-output/archive/: architecture.md
_bmad-output/implementation-artifacts/: 1-1-database-foundation-channel-model.md  1-2-channel-configuration-yaml-loader.md  1-3-per-channel-encrypted-credentials-storage.md  1-4-channel-voice-branding-configuration.md  1-5-channel-storage-strategy-configuration.md  1-6-channel-capacity-tracking.md  2-1-task-model-database-schema.md  2-2-notion-api-client-with-rate-limiting.md  2-3-video-entry-creation-in-notion.md  2-4-batch-video-queuing.md  2-5-webhook-endpoint-for-notion-events.md  2-6-task-enqueueing-with-duplicate-detection.md  3-1-cli-script-wrapper-async-execution.md  3-10-pipeline-orchestration-enhancements.md  3-2-filesystem-organization-path-helpers.md  3-3-asset-generation-step-gemini.md  3-4-composite-creation-step.md  3-5-video-clip-generation-step-kling.md  3-6-narration-generation-step-elevenlabs.md  3-7-sound-effects-generation-step.md  3-8-video-assembly-step-ffmpeg.md  3-9-end-to-end-pipeline-orchestration.md  4-1-worker-process-foundation.md  4-2-task-claiming-with-pgqueuer.md  4-3-priority-queue-management.md  4-4-round-robin-channel-scheduling.md  4-5-rate-limit-aware-task-selection.md  4-6-parallel-task-execution.md  5-1-26-status-workflow-state-machine.md  5-2-review-gate-enforcement.md  5-3-asset-review-interface.md  5-4-video-review-interface.md  5-5-audio-review-interface.md  5-6-real-time-status-updates-to-notion.md  5-7-progress-visibility-dashboard.md  5-8-bulk-approve-reject-operations.md  epic-1-retro-2026-01-11.md  epic-2-retro-2026-01-13.md  epic-3-retrospective-2026-01-16.md  epic-4-story-estimate-review-2026-01-16.md  (+1 more)
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2026-01-10.md  prd.md  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
alembic/: env.py
app/: __init__.py  config.py  constants.py  database.py  entrypoints.py  exceptions.py  main.py  models.py  queue.py  worker.py
channel_configs/: .gitkeep  _example.yaml
config/: README.md
docs/: architecture-decisions.md  architecture-patterns.md  architecture.md  comprehensive-analysis-main.md  development-guide.md  existing-documentation-inventory.md  index.md  notion-setup.md  project-overview.md  project-parts-metadata.json  project-scan-report.json  project-structure.md  security-checklist.md  source-tree-analysis.md  technology-stack.md  user-provided-context.md
generic_prompts/: 1_topic_research.md  2_script_development.md  3.5_automated_asset_generation.md  3_visual_asset_planning.md  4_video_prompt_engineering.md
scripts/: .env.example  assemble_video.py  check_all_tasks.py  check_channels.py  check_enums.py  check_specific_task.py  check_test_entry.py  create_composite.py  create_enums.py  create_notion_test_entry.py  create_split_screen.py  debug_notion_sync.py  fix_channel_id_type.py  fix_column_types.py  fix_enum_case.py  fix_foreign_key.py  generate_asset.py  generate_audio.py  generate_fernet_key.py  generate_sound_effects.py  generate_video.py  recreate_enum_columns.py  sync_channels.py  test_enum_values.py  test_notion_integration.py  validate_deployment.sh  verify_notion_sync.sh
tests/: __init__.py  conftest.py  test_assemble_video.py  test_channel_capacity_service.py  test_channel_config.py  test_channel_config_branding.py  test_channel_config_r2.py  test_config.py  test_create_composite.py  test_create_split_screen.py  test_credential_service.py  test_database.py  test_e2e_channel_workflow.py  test_e2e_task_workflow.py  test_encryption.py  test_entrypoints.py  test_exceptions.py  test_generate_asset.py  test_generate_audio.py  test_generate_sound_effects.py  test_generate_video.py  test_main.py  test_models.py  test_performance.py  test_queue.py  test_storage_strategy_service.py  test_task_model.py  test_task_model_26_status.py  test_voice_branding_service.py  test_worker.py
(+120 files in other folders)
