[project]
name = "pokemon-natural-geo"
version = "0.1.0"
description = "Photorealistic Pokémon nature documentary production pipeline"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "pyjwt>=2.8.0",
    "requests>=2.31.0",
    # Orchestration layer dependencies (Story 1.1+)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",  # For async SQLite tests
    "pydantic>=2.8.0",  # Schema validation (Story 1.2+)
    "pyyaml>=6.0",  # YAML config parsing (Story 1.2+)
    "structlog>=23.2.0",  # Structured logging (Story 1.2+)
    "cryptography>=41.0.0",  # Fernet symmetric encryption (Story 1.3+)
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
